# fpfh-icp-benchmarks

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
config/: default.yaml
config/datasets/: lmo.yaml  tless.yaml  ycbv.yaml
results/: .gitkeep
scripts/: download_data.py  run_benchmark.py
src/: __init__.py
src/algorithms/: base_algorithm.py  fpfh_icp.py
src/benchmark/: __init__.py  runner.py
src/utils/: metrics.py  pointcloud.py  visualization.py
tests/: test_algorithms.py
